--- a/web3-tickets/client/index.html
+++ b/web3-tickets/client/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Tickets</a>
+            <div id="account" class="d-flex"></div>
+        </div>
+      </nav>
     <script type="module" src="index.js"></script>
 </body>
 </html>
