--- a/web3-tickets/client/index.html
+++ b/web3-tickets/client/index.html
@@ -13,6 +13,14 @@
             <div id="account" class="d-flex"></div>
         </div>
       </nav>
+
+      <div class="container">
+        <div class="row">
+        <div class="col-md-12">
+          <div id="tickets"></div>
+        </div>
+      </div>
+      </div>
     <script type="module" src="index.js"></script>
 </body>
 </html>
