--- a/web3-tickets/client/index.html
+++ b/web3-tickets/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="header">
         <div class="container">
           <a class="navbar-brand" href="#">Tickets</a>
             <div id="account" class="d-flex"></div>
